# OVS-l2-switch

./: .gitignore  AI Based coding rules for Rust and Go development.md  AI-Based-coding-rules-for-Rust-and-Go-development.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  LICENSE  Makefile  OWNERS.md  README.md  ROADMAP.md  TEST_STRATEGY.md  docker-compose.test.yml  phase1_issues.csv
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  ci_task.md  documentation.md  feature_request.md
.github/workflows/: ci.ym  ci.yml  main.yml  nightly.yml  rust.yml
Old/: README.md
control-plane-go/: Dockerfile  go.mod
control-plane-go/cmd/switchapi/: main.go
control-plane-go/cmd/switchctl/: main.go
dataplane-rs/: Cargo.toml  Dockerfile
dataplane-rs/shared/types/: mod.rs
dataplane-rs/src/: lib.rs  main.rs
dataplane-rs/src/features/: mod.rs  prd.md
dataplane-rs/src/features/forwarding/: mod.rs  prd.md  service.rs  services.rs  types.rs
dataplane-rs/src/features/forwarding/internal/: mac_table.rs  mod.rs  pipeline.rs
dataplane-rs/src/features/forwarding/types/: ethernet_frame.rs  forwarding_entry.rs  mac_address.rs  mod.rs  net_if.rs  vlan.rs
dataplane-rs/src/features/vlan/: mod.rs  service.rs  service_test.rs  types.rs
dataplane-rs/src/shared/: error.rs  mod.rs
dataplane-rs/src/shared/internal/: mod.rs
dataplane-rs/src/shared/types/: error.rs  mod.rs  result.rs  results.rs
dataplane-rs/src/shared/utils/: config.rs  logging.rs  mod.rs
docker/: Dockerfile.dev
docs/: ARCHITECTURE.md  INSTALL.md  ISSUE_SOP.md  PHASE1_TASKS.md  PRD  PRD_TEMPLATE.md
docs/releases/: release-notes_v0.1.0-foundation.md
fuzz/: Cargo.toml  dummy.rs
fuzz/fuzz_targets/: ethernet.rs  vlan.rs
integration-tests/: Dockerfile  run_tests.sh
internal/features/control_plane/: prd.md
internal/features/management/: prd.md
tests/: Dockerfile  go.mod  integration_test.go
tests/integration/: Dockerfile  test.sh
(+2 files in other folders)
