[package]
name = "dataplane-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# We don't want to accidentally publish fuzz harnesses
[lib]
path = "dummy.rs"   # Required placeholder, since cargo-fuzz expects a lib

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dataplane]
# Point this at your dataplane crate — adjust if it's not exactly "src"
path = ".."

# Prevent running tests by default in this package
[workspace]
members = []

[[bin]]
name = "ethernet"
path = "fuzz_targets/ethernet.rs"

[[bin]]
name = "vlan"
path = "fuzz_targets/vlan.rs"