[package]
name = "dataplane-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "dummy.rs"

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dataplane_rs]
path = "../dataplane-rs"

[[bin]]
name = "ethernet"
path = "fuzz_targets/ethernet.rs"

[[bin]]
name = "vlan"
path = "fuzz_targets/vlan.rs"

[package.metadata]
cargo-fuzz = true